--- a/src/App.css
+++ b/src/App.css
@@ -128,3 +128,9 @@ img {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+/* @media screen and (max-width: 400x) {
+  .content-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+} */
